--- a/genetics.html
+++ b/genetics.html
@@ -3,6 +3,18 @@
 <title>Genetics</title>
 </head>
 <body>
-<h1><center>Genetics</center></h1>
+<h1><center>Genetics</center></h1><br>
+  <b>Genetic metabolic and developmental disorders</b><br>
+  <i>multifactorial: VATER syndrome, association syndromes</i><br>
+  <i>large genomic changes: Beckwith-Wiedemann syndrome; Down syndrome; Prader-Willi syndrome</i><br>
+  <i>enzymatic/metabolic: alpha-1 antitrypsin deficiency; porphyria; inborn errors of
+metabolism (eg, maple syrup urine disease, diseases involving urea cycle); storage
+diseases (eg, Fabry disease, Tay-Sachs disease, glycogen storage disease,
+    mucopolysaccharidoses)</i><br<>
+<i>structural protein disorders: amyloidosis; Ehlers-Danlos syndrome; immotile cilia
+  syndrome (Kartagener syndrome; primary ciliary dyskinesia); Marfan syndrome</i><br>
+<i>intracellular/extracellular transport receptors: cystic fibrosis; hemochromatosis; Wilson
+  disease</i><br>
+  <i>triplet repeat/RNA disorders: fragile X syndrome</i><br>
 </body>
 </html>
