--- a/pharmacology.html
+++ b/pharmacology.html
@@ -11,6 +11,9 @@
 <i> Concentration and dose-effect relationships (eg, efficacy, potency), types of agonists (eg, full, partial, inverse) and antagonists and their actions</i><br>
 <i> Individual factors altering pharmacokinetics and pharmacodynamics (eg, age, gender, disease, tolerance, compliance, body weight, metabolic proficiency, pharmacogenetics)</i><br>
   <i> Mechanisms of drug adverse effects, overdosage, toxicology</i><br>
+ <i> adverse effects of drugs on multisystem disorders: drug-induced electrolyte abnormalities
+and acid base-disorders (eg, albuterol; prednisone; diuretics; alcohol; drugs inducing
+   polydipsia, SIADH, or diabetes insipidus)</i>
   <i> Mechanisms of drug interactions</i><br>
   <i> Signal transduction, including structure/function of all components of signal transduction</i>
   <i> Pathways such as receptors, ligands (eg, general principles of nitric oxide, autocrine and paracrine signaling)</i><br>
