--- a/pharmacology.html
+++ b/pharmacology.html
@@ -13,7 +13,7 @@
   <i> Mechanisms of drug adverse effects, overdosage, toxicology</i><br>
  <i> adverse effects of drugs on multisystem disorders: drug-induced electrolyte abnormalities
 and acid base-disorders (eg, albuterol; prednisone; diuretics; alcohol; drugs inducing
-   polydipsia, SIADH, or diabetes insipidus)</i>
+   polydipsia, SIADH, or diabetes insipidus)</i><br>
   <i> Mechanisms of drug interactions</i><br>
   <i> Signal transduction, including structure/function of all components of signal transduction</i>
   <i> Pathways such as receptors, ligands (eg, general principles of nitric oxide, autocrine and paracrine signaling)</i><br>
