--- a/Biostats.html
+++ b/Biostats.html
@@ -3,6 +3,94 @@
 <title>Biostatistics and Epidemiology</title>
 </head>
 <body>
-<h1><center>Biostatistics and Epidemiology</center></h1>
+<h1><center>Biostatistics and Epidemiology</center></h1><br>
+  <h2>Epidemiology/Population Health</h2><br>
+  <b>Measures of disease frequency: incidence/prevalence</b><br>
+  <b>Measures of health status</b><br>
+  <i>rates, crude and adjusted; reproductive rates (eg, maternal
+mortality, neonatal/infant/under-5 mortality); mortality, morbidity; standardization; life
+expectancy, health-adjusted life expectancy; population attributable risk (PAR),
+    population attributable risk percent (PAR%); risk factors</i><br>
+  <b>Survival analysis interpretation (eg, Kaplan-Meier curve)</b><br>
+  <b>Composite health status indicators, measures of population impact</b><br>
+  <i>years of potential life lost; quality-adjusted life years; disability-adjusted life years; standardized mortality ratio</i><br>
+  <b>Population pyramids and impact of demographic changes</b><br>
+  <b>Disease surveillance and outbreak investigation</b><br>
+  <i>disease reporting; response to public
+  health advisory, health promotion; recognition of clusters</i><br>
+  <b>Communicable disease transmission</b><br>
+  <i>attack rate; herd immunity; reportable diseases</i><br>
+  <b>Points of intervention</b><br> 
+  <i>primary, secondary; community level (eg, cigarette taxes, soda taxes,
+smoke-free cities, buildings: restaurants, public buildings); school policies; access,
+    healthy food, transportation, clean air, safe environments</i><br>
+  <h2>Study design, types and selection of studies</h2><br>
+  (includes dependent/independent variables)<br>
+  <b>Descriptive studies</b><br>
+  <i>(case report [one person]/case series [more than one])</i><br>
+  <b>Analytical studies: observational</b><br>
+  <i>community surveys; cross-sectional (individuals);
+    ecological (populations); case control; retrospective and prospective cohort</i><br>
+  <b>Analytical studies: interventional</b><br>
+  <i>clinical trial (randomized controlled trial; double-blind;
+    placebo-controlled; noninferiority/equivalence trials); community intervention</i><br>
+  <b>Systematic reviews and meta-analysis</b><br>
+  <i>potential uses; estimation of effect sizes;
+    heterogeneity; publication bias; forest plots, funnel diagrams; risk of bias, bias risk scale</i><br>
+  <b>Obtaining and describing samples</b><br>
+  <i>matching, inclusion/exclusion criteria, selecting
+appropriate controls for studies, lack of controls, concealed allocation,
+    randomization, stratification</i><br>
+  <b>Methods to handle noncompliance</b><br>
+  <i>loss to follow-up; intention-to-treat analysis</i><br>
+  <h3>Qualitative analysis</h3><br>
+  <b>Measures of association</b><br>
+  <brRelative risk</b><br>
+  <b>Odds ratio, hazard ratio</b><br>
+  <b>Other measures of association</b><br>
+  <i>number needed to treat/harm; absolute risk (AR), absolute
+risk percent (AR%); population attributable risk (PAR), population attributable risk
+    percent (PAR%)</i><br>
+  <b>Distributions of data</b><br>
+  <i>measures of central tendency; measures of variability; regression to
+    mean; normal distribution; nominal measurement</i><br>
+  <b>Correlation and regression, uses and interpretation</b><br>
+  <i>correlation coefficients;
+    multiple regression</i><br>
+  <h3>Principles of testing and screening</h3>
+  <b>Properties of a screening test</b><br>
+  <i>validity, accuracy, reliability; criteria for a screening test;
+confirmatory testing; appropriateness; lead-time bias, length bias; screening vs
+    diagnostic tests</i><br>
+  <b>Sensitivity and specificity; predictive value, positive and negative</b><br>
+  <b>ROC curves</b><br>
+  <b>Probability</b><br> 
+  <i>theory (independence, product, addition rules); decision trees; likelihood ratios
+    (application of Bayes theorem); posttest, pretest</i><br>
+  <b>Study interpretation, drawing conclusions from data</b><br>
+  <b>Causation</b><br>
+  <i>hypothesis-generating vs hypothesis-driven testing; causal criteria, temporality,
+  temporal sequence, dose-response relationship; reverse causality</i><br>
+  <b>Chance</b><br>
+<i>null hypothesis, Type I error and alpha level (multiple comparisons, random
+  error/chance)</i><br>
+  <i>sample size and Type II error, beta, power</i><br>
+<i>selection and interpretation of basic tests of statistical significance: chi-square;
+  confidence intervals; p-values; t-test</i><br>
+  <i>a priori vs. post hoc analysis: subgroup analysis; error rate; affect types</i><br>
+  <b>Interpretation of graphs/tables and text</b><br>
+  <b>Bias, confounding, and threats to validity (includes methods to address)</b><br>
+  <i>selection, sampling bias</i><br>
+<i>information bias: recall; ascertainment, ecologic fallacy, lack of blinding; loss to follow up</i><br>
+  <i>confounding variables, Hawthorne effect (includes methods to address)</i><br>
+  <i>other threats to validity (eg, placebo effect)</i><br>
+  <b>Internal vs. external validity</b><br>
+  <i>generalizability (external validity); efficacy vs effectiveness</i><br>
+  <b>Statistical vs. clinical significance; clinical and surrogate outcome/end point</b><br>
+<b>Clinical decision making, interpretation and use of evidence-based data and
+  recommendations</b><br>
+  <i>application of study results to patient care and practice, including
+patient preferences and individualization of risk profiles; risk/benefit analysis; synthesis of
+    concepts with real data </i><br>
 </body>
 </html>
