--- a/PPOM.html
+++ b/PPOM.html
@@ -16,5 +16,16 @@
 <h2>Cultural Competency</h2>
 <br>
 <h2>Ethical Principles in Practice and Research</h2>
+    <br>
+  <b> Informed consent for research</b><br>
+  <b>Privacy of patient data (HIPAA)</b><Br>
+  <b>Roles of institutional review boards (IRBs)</b><br>
+  <b>Intervention analysis</b><br>
+  <i>intervention analysis; stopping analysis; safety monitoring</i><br>
+  <b>Regulatory issues</b><br>
+  <i>drug development, phases of approval; appropriateness of placebo;
+appropriateness of randomized clinical trial; components of studies; ethics; scheduling;
+    off-label use </i><br>
+  <b>Other issues related to research ethics</b><br>
 </body>
 </html>
