--- a/ICSPOM.html
+++ b/ICSPOM.html
@@ -6,6 +6,17 @@
 <h1>Interpersonal and Communication Skills in Practice of Osteopathic Medicine</h1>
 <br>
 <h2>Eliciting information</h2>
+  <br>
+  <b>Communication and interpersonal skills, including health literacy and numeracy, cultural
+    competence</b><br>
+<i>Patient interviewing, consultation, and interactions with the family (patient centered communication skills)
+  fostering the relationship (eg, expressing interest)</i><br>
+  <i>information gathering (eg, exploring patient's reaction to illness)</i><Br>
+  <i>information provision (eg, providing information about working diagnosis)</i><br>
+  <i>making decisions (eg, eliciting patient's perspectives)</i><br>
+  <i>supporting emotions (eg, effective discussion with difficult patients)</i><br>
+  <i>enabling patient behaviors (eg, education and counseling)</i><br>
+  <b>Use of an interpreter</b><br>
 <br>
 <h2>Rapport building</h2>
 <br>
