--- a/PPOM.html
+++ b/PPOM.html
@@ -27,5 +27,34 @@
 appropriateness of randomized clinical trial; components of studies; ethics; scheduling;
     off-label use </i><br>
   <b>Other issues related to research ethics</b><br>
+   <h3>Medical ethics and jurisprudence, include issues related to death and dying and
+       palliative care</h3><br>
+<b>Consent/informed consent to treatment, permission to treat (full disclosure, risks and
+benefits, placebos, alternative therapies, conflict of interest, and vulnerable
+    populations)</b><br>
+    <b>Determination of medical decision-making capacity/informed refusal</b><br>
+    <b>Involuntary admission</b><br>
+    <b>Legal issues related to abuse (child, elder, and intimate partner)</b><br>
+    <i>child protective services, foster care, immunizations</i><br>
+    <i>legal requirements for reporting abuse or neglect/obligation to warn</i><br>
+    <b>Birth-related issues</b><br>
+    <b>Death and dying and palliative care</b><br>
+    <i>life support</i><br>
+    <i>advance directive, health care proxy, advance care planning</i><br>
+    <i>euthanasia and physician-assisted suicide</i><br>
+    <i>brain death/diagnosing brain death/diagnosing death</i><br>
+    <i>pronouncing death</i><br>
+    <i>organ donation</i><br>
+    <i>hospice</i><br>
+    <i>pain management, including ethical issues related to death and dying</i><br>
+    <i>information sharing, counseling families</i><br>
+    <i>psychosocial and spiritual counseling, fear and loneliness</i><br>
+    <b>Physician-patient relationship</b><Br>
+    <i>(boundaries, confidentiality including HIPAA, privacy, truthtelling, other principles of medical ethics, eg, autonomy, justice, beneficence)</i><br>
+    <b>Impaired physician, including duty to report impaired physician</b><br>
+    <b>Negligence/malpractice, including duty to report negligence and malpractice</b><br>
+    <b>Physician misconduct, including duty to report physician misconduct</b><br>
+    <b>Referrals</b><br>
+    <b>Cultural issues not otherwise coded</b>
 </body>
 </html>
