--- a/CHPPRW.html
+++ b/CHPPRW.html
@@ -20,9 +20,114 @@
 </form> 
 Answer: <p style="color:white"> The 5 stages include denial, anger, bargaining, depression, and acceptance. Rejection is not one of the formal stages.</p>
 <br>
-<h2>Patient safety</h2>
+<h2>Patient safety</h2><br>
+  <h3>Quality improvement</h3><br>
+  <b>Improvement science principles</b>
+<i>Variation and standardization: variation in process, practice; checklists, guidelines, and
+  clinical pathways</i><br>
+  <i>Reliability</i>
+  <b>Specific models of quality improvement</b><br>
+  <i>model for improvement: plan-do-study-act
+    (PDSA), plan-do-check-act (PDCA)</i><br>
+  <b>Quality measurement</b><br>
+  <i>Structure, process, outcome, and balancing measures</i><br>
+  <i>Measurement tools: run and control charts</i><br>
+<i>Development and application of system and individual quality measures: core
+  measures; physician quality report system (PQRS); event reporting system</i><br>
+  <b>Strategies to improve quality</b><br>
+  <i>Role of leadership</i><br>
+  <i>Principles of change management in quality improvement: specific strategies</i><br>
+  <b>Attributes of high-quality health care</b><br>
+<i>High-value/cost-conscious care: overutilization of resources, including diagnostic
+  testing, medications</i><br>
+  <i>Equitable care: access</i><br>
+  <i>Patient-centered care</i><br>
+  <i>Timely care</i><br>
+  <h3><Patient Safety</h3><br>
+    <b>Patient safety principles</b><br>
+    <b>Epidemiology of medical error</b><br>
+<i>Error categorization/definition: active vs latent errors; Swiss cheese model of error;
+  preventable vs non-preventable; near miss events/safety hazards</i><br>
+<b>Causes of error</b><br>
+<i>Patient factors: understanding of medication use; health literacy; economic status;
+  cultural factors (eg, religion); failure to make appointments; socioeconomic status</i><br>
+<i>Physician factors: deficiency of knowledge; judgment errors; diagnostic errors;
+fatigue, sleep deprivation; bias – cognitive, availability, heuristic, anchoring,
+  framing</i><br>
+    <i>Human factors (eg, cognitive, physical, environmental)</i><br>
+<b>High reliability of organization (HRO) principles: change management and
+  improvement science; conceptual models of improvement</b><br>
+    <i>Reporting and monitoring for errors: event reporting systems</i><br>
+    <b>Communication with patients after adverse events (disclosure/transparency)</b><br>
+    <b>Specific types of error</b><br>
+    <i>Transitions of care errors</i><br>
+    <i>handoff communication including shift-to-shift, transfer,
+and discharge: handoffs and related communication; discontinuities; gaps; discharge;
+      transfers</i><br>
+    <i>Medication errors</i><br>
+<i>ordering, transcribing, dispensing, administration (wrong quantity, wrong route,
+  wrong drug)</i><br>
+    <i>medication reconciliation</i><br>
+    <i>Mathematical error</i><br>
+    <i>Procedural errors</b>
+    <b>Universal protocol (time out); wrong patient; wrong site; wrong procedure</b><br>
+    <b>Retained foreign bodies</b><br>
+    <b>Injury to structures</b><br>
+    <i>paracentesis; bowel perforation; thoracentesis; pneumothorax;
+central venous/arterial line injuries; arterial puncture and bleeding and venous
+      thrombosis; lumbar puncture bleeding; paralysis</i><br>
+    <b>Other errors</b><br>
+    <i>anesthesia-related errors; mathematical errors</i><br>
+    <b>Health care-associated infections</b><br>
+    <i>nosocomial infection – eg, surgical site, ventilator
+associated, catheter-related; handwashing procedures or inadequate number of
+handwashing stations; central line-associated blood stream infections; surgical site
+infections; catheter-associated urinary tract infections; ventilator-associated
+      pneumonia</i><br>
+    <b>Documentation errors</b><Br>
+    <i>electronic medical record (including voice-recognition software
+errors); record keeping; incorrect documentation (eg, wrong patient, wrong date,
+      copying and pasting, pre-labeling)</i><br>
+    <i>Patient identification errors</i><br>
+    <i>Mislabeling: transfusion errors related to mislabeling</i><br>
+    <b>Verification/two identifiers</b><br>
+    <i>lack of dual validation, including verbal verification of
+  lab results</i><br>
+    <b>Diagnostic errors: errors in diagnostic studies; misinterpretation</b><br>
+    <b>Monitoring errors</b><Br>
+    <i>Cardiac monitoring/telemetry</b><br>
+    <b>Drug monitoring (warfarin, antibiotics)</b><br>
+    <b>Device-related errors</b><br>
+    <i>malfunction</i><Br>
+    <i>programming error</i><br>
+    <i>incorrect use</i><br>
+    <b>Strategies to reduce error</b><br>
+    <i>Human factors engineering</i><br>
+    <i>Situational awareness</i><br>
+    <i>Hierarchy of effective interventions: forcing function; visual cues</i><br>
+    <b>Error analysis tools</b><Br>
+    <i>error/near miss analysis; failure modes and effect analysis;
+      morbidity and mortality review; root cause analysis</i><br>
+    <b>Safety behavior and culture at the individual level</b><Br>
+    <i>hierarchy of health care, flattening
+hierarchy, speak up to power; afraid to report, fear; psychological safety; closed-loop
+      communication</i><br>
+    <b>Teamwork</b><br>
+    <i>principles of highly effective teams; case management; physician teams,
+physician-physician communication; interprofessional/intraprofessional teams;
+strategies for communication among teams, including system-provider
+communication, physician-physician communication (eg, consultations),
+      interprofessional communication, provider-patient communication </i><br>
 <br>
 <h2>Public health</h2>
+ <b> Characteristics of a complex system and factors leading to complexity: how complexity
+   leads to error</b><br>
+  <b>Health care/organizational behavior and culture</b><br>
+  <i>environmental factors, workplace
+design and process; staffing; overcommitment, space, people, time, scheduling;
+standardization, reducing variance, simplification, metrics; safety culture; integration
+of care across settings; overutilization of resources (imaging studies, antibiotics,
+    opioids); economic factors </i><br>
 <br>
 <h2>Risk assessment</h2>
 <br>
