--- a/CHPPRW.html
+++ b/CHPPRW.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Community Health and Patient Presentations Related to Wellness</title>
+<title>Community Health and Presentations Related to Wellness</title>
 </head>
 <body>
 <h1><center>Community Health and Patient Presentations Related to Wellness</center></h1>
@@ -22,10 +22,10 @@ Answer: <p style="color:white"> The 5 stages include denial, anger, bargaining, 
 <br>
 <h2>Patient safety</h2><br>
   <h3>Quality improvement</h3><br>
-  <b>Improvement science principles</b>
+  <b>Improvement science principles</b><br>
 <i>Variation and standardization: variation in process, practice; checklists, guidelines, and
   clinical pathways</i><br>
-  <i>Reliability</i>
+  <i>Reliability</i><br>
   <b>Specific models of quality improvement</b><br>
   <i>model for improvement: plan-do-study-act
     (PDSA), plan-do-check-act (PDCA)</i><br>
@@ -43,7 +43,7 @@ Answer: <p style="color:white"> The 5 stages include denial, anger, bargaining, 
   <i>Equitable care: access</i><br>
   <i>Patient-centered care</i><br>
   <i>Timely care</i><br>
-  <h3><Patient Safety</h3><br>
+  <h3><Patient Safety</h3><br></h3>
     <b>Patient safety principles</b><br>
     <b>Epidemiology of medical error</b><br>
 <i>Error categorization/definition: active vs latent errors; Swiss cheese model of error;
