--- a/CHPPRW.html
+++ b/CHPPRW.html
@@ -69,7 +69,7 @@ and discharge: handoffs and related communication; discontinuities; gaps; discha
   wrong drug)</i><br>
     <i>medication reconciliation</i><br>
     <i>Mathematical error</i><br>
-    <i>Procedural errors</b>
+    <i>Procedural errors</b><br>
     <b>Universal protocol (time out); wrong patient; wrong site; wrong procedure</b><br>
     <b>Retained foreign bodies</b><br>
     <b>Injury to structures</b><br>
@@ -128,6 +128,16 @@ design and process; staffing; overcommitment, space, people, time, scheduling;
 standardization, reducing variance, simplification, metrics; safety culture; integration
 of care across settings; overutilization of resources (imaging studies, antibiotics,
     opioids); economic factors </i><br>
+  <b>Health care policy</b><Br>
+  <i>Health care disparities: race/ethnicity; numeracy/literacy; socioeconomic status</i><Br>
+  <b>Access to care: critical access systems or hospitals</b><br>
+  <b>Social justice </b><Br>
+  <b>Health care economics/Health care financing</b><Br>
+  <b>Types of insurance: Medicare, Medicaid, private insurance, self-pay</b><br>
+<b>Navigating the insurance system: deductibles/co-pays; in-/out-of-network; preferred
+  providers</b><Br>
+<b>Reimbursement issues affecting safety and quality: emergency services – EMTALA;
+pay-for-performance<br>
 <br>
 <h2>Risk assessment</h2>
 <br>
