--- a/pharmacology.html
+++ b/pharmacology.html
@@ -6,12 +6,41 @@
 <h1><center>Pharmacology</center></h1>
 <br>
   <h2>Pharmacodynamic and pharmacokinetic processes: general principles</h2><br>
-  <i> Pharmacokinetics: absorption, distribution, metabolism, excretion, dosage intervals</i><br>
+  <b> Pharmacokinetics: absorption, distribution, metabolism, excretion, dosage intervals</b><br>
   <i> Mechanisms of drug action, structure-activity relationships (eg, anticancer drugs) </i><br>
-<i> Concentration and dose-effect relationships (eg, efficacy, potency), types of agonists (eg, full, partial, inverse) and antagonists and their actions</i><br>
+  A 22-year-old woman suffering from asthma was prescribed albuterol by inhalation. Albuterol is a bronchodilating drug with a molecular weight of 239 daltons. Which of the following permeation processes most likely accounted for the transfer of the drug through the bronchial mucosa?<br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Aqueous diffusion</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Lipid diffusion</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Facilitated diffusion</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Endocytosis</label><br>
+  <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Active transport</label><br>
+</form> 
+Answer: <p style="color:white"> B Lipid diffusion is by far the most common transport system of drugs across cell membranes. Because albuterol has a low molecular weight, lipid diffusion most likely accounts for the transfer of albuterol through the bronchial mucosa.</p>
+<br>
+  <i> Concentration and dose-effect relationships (eg, efficacy, potency), types of agonists (eg, full, partial, inverse) and antagonists and their actions</i><br>
 <i> Individual factors altering pharmacokinetics and pharmacodynamics (eg, age, gender, disease, tolerance, compliance, body weight, metabolic proficiency, pharmacogenetics)</i><br>
   <i> Mechanisms of drug adverse effects, overdosage, toxicology</i><br>
- <i> adverse effects of drugs on multisystem disorders: drug-induced electrolyte abnormalities
+   A 34-year-old man on vacation in Mexico was admitted to the hospital because of vomiting, double vision, and muscular paralysis. The man reported that he had eaten some canned food from a local vendor the previous day. After a physical examination, a presumptive diagnosis of botulism was made. It is known that botulinum toxin causes paralysis by getting inside the axon terminals of motor nerves, where it inhibits the release of acetylcholine. Botulinum toxin is a protein with a molecular weight greater than 100,000 daltons. Which of the following permeation processes most likely accounts for the transfer of the toxin through the nerve cell membrane?<br>
+<form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Aqueous diffusion</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Lipid diffusion</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Facilitated diffusion</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Endocytosis </label><br> 
+  <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Filtration</label><br>
+</form> 
+Answer: <p style="color:white"> D Very large molecules cannot permeate cell membranes by diffusion or filtration. The only way they can cross cell membranes is by endocytosis, a process by which a substance is bound to the cell surface, engulfed by the cell membrane, and carried into the cytosol, where the substance can be released by breakdown of the vesicle membrane.</p><br>
+  <i> adverse effects of drugs on multisystem disorders: drug-induced electrolyte abnormalities
 and acid base-disorders (eg, albuterol; prednisone; diuretics; alcohol; drugs inducing
    polydipsia, SIADH, or diabetes insipidus)</i><br>
   <i> Mechanisms of drug interactions</i><br>
