--- a/pharmacology.html
+++ b/pharmacology.html
@@ -22,7 +22,37 @@
   <label for="other"> E. Active transport</label><br>
 </form> 
 Answer: <p style="color:white"> B Lipid diffusion is by far the most common transport system of drugs across cell membranes. Because albuterol has a low molecular weight, lipid diffusion most likely accounts for the transfer of albuterol through the bronchial mucosa.</p>
-<br>
+<br>A 51-year-old woman suffering from hyperthyroidism was administered an oral solution of radioactive iodine to destroy her thyroid gland. Which of the following permeation processes most likely accounted for the transfer of the drug across the thyroid cell membrane?<br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Active transport</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Lipid diffusion</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Facilitated diffusion</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Endocytosis</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Aqueous diffusion</label><br>
+</form> 
+Answer: <p style="color:white">A About one fifth of the iodides ingested with foods are selectively removed from the circulating blood by the Na+-dependent secondary active transport system that concentrates iodide in thyroid cells 30 to 100 times its concentration in the blood. Because radioactive iodine is essentially the same as iodide taken with foods, it is transported into the thyroid cells by the same secondary active transport system.<Br> </p>
+  <br>
+  A 12-year-old boy recently diagnosed with type 1 diabetes started a therapy with two daily subcutaneous administrations of insulin. Which of the following permeation processes best explains the absorption of insulin from the site of injection?<br>
+ <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Bulk flow</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Lipid diffusion</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Facilitated diffusion</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Endocytosis</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Active transport</label><br>
+</form> 
+Answer: <p style="color:white">A A drug administered subcutaneously will initially be located primarily in the extracellular fluid. In order to be absorbed, the drug must enter the general circulation; that is, it must cross the capillary wall. Capillaries have very wide fenestrae that permit the passage of molecules with a molecular weight as high as 30,000 daltons (D). Therefore, most drugs given by the subcutaneous or intramuscular routes will enter the general circulation by bulk flow transport (or filtration; also known as solvent drag) through capillary fenestrae. Moreover, insulin is a protein with a molecular weight of about 6000 D, so it cannot cross the capillary wall by lipid or aqueous diffusion through aquaporins (water channels) of cell membranes. Bulk flow transport is a passive process and is directly proportional to the pressure gradient across the capillary wall. It does not depend on the structure of the drug but only on its molecular size (both lipid- and water-soluble drugs can be filtered provided the molecule is not too large).
+
+B See correct answer explanation.
+
+C–E Facilitated diffusion, endocytosis, and active transport do not seem to be involved in the absorption of insulin from the site of injection. </p><br>
   <i> Concentration and dose-effect relationships (eg, efficacy, potency), types of agonists (eg, full, partial, inverse) and antagonists and their actions</i><br>
 <i> Individual factors altering pharmacokinetics and pharmacodynamics (eg, age, gender, disease, tolerance, compliance, body weight, metabolic proficiency, pharmacogenetics)</i><br>
   <i> Mechanisms of drug adverse effects, overdosage, toxicology</i><br>
@@ -44,6 +74,30 @@ Answer: <p style="color:white"> D Very large molecules cannot permeate cell memb
 and acid base-disorders (eg, albuterol; prednisone; diuretics; alcohol; drugs inducing
    polydipsia, SIADH, or diabetes insipidus)</i><br>
   <i> Mechanisms of drug interactions</i><br>
+  An 85-year-old man was recently admitted to a nursing facility. Diseases listed in his medical record on admission were depression with anxiety symptoms, atrial fibrillation, chronic obstructive pulmonary disease, and osteoarthritis. Medications taken orally by the patient included the following:<br>
+Sertraline (base, pKa = 9.5)<br>
+Diazepam (base, pKa = 3.0)<br>
+Amiodarone (base, pKa = 7.4)<br>
+Theophylline (acid, pKa = 8.8)<br>
+Ibuprofen (acid, pKa 4.8)<br>
+  Shortly after administration, which of the following drugs was most likely concentrated inside the patient’s gastric cells?<br>
+<form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Sertraline</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Diazepam</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Amiodarone</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Theophylline</label><br> 
+  <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E.Ibuprofen </label><br>
+</form> 
+Answer: <p style="color:white"> The Henderson-Hasselbalch equation predicts that a weak acid will be more nonionized, and therefore more lipid soluble, when pKa is greater than pH. Because the pH of the stomach lumen is less than 2, ibuprofen, an acid drug with a pKa of 4.8, will be mainly nonionized in the gastric lumen and will readily penetrate the gastric mucosal cell membranes. Inside the mucosal cells, however, the pH is about 7, and the drug will become mainly ionized because now the pKa is less than the pH. Consequently, the concentration gradient of the nonionized, lipid-soluble form will remain high, and the drug will continue crossing cell membranes. At equilibrium, the concentration of the nonionized moiety of the drug will be the same on both sides, but the concentration of the ionized moiety inside the cell can be 15 to 20 times higher than that in the gastric lumen, as the ionized moiety is “trapped” inside the cell (ion-trapping mechanism). Therefore, the total drug concentration inside the cell will be high.<br>
+  will stay in the stomach lumen.
+
+D Theophylline, an acidic drug with a pKa of 8.8, is mainly nonionized in the stomach lumen and therefore can readily penetrate the gastric cell membranes. Inside the gastric cells, however, the drug remains mainly non-nonionized (i.e., lipid soluble) because the pKa is greater than the pH. Therefore, the drug will be able to diffuse through the basolateral membrane of the cell, thus reaching the extracellular fluids. No ion trapping occurs, and the drug will not concentrate inside the cells.<br>
+  </p>
   <i> Signal transduction, including structure/function of all components of signal transduction</i>
   <i> Pathways such as receptors, ligands (eg, general principles of nitric oxide, autocrine and paracrine signaling)</i><br>
 </body>
