--- a/pharmacology.html
+++ b/pharmacology.html
@@ -48,11 +48,41 @@ Answer: <p style="color:white">A About one fifth of the iodides ingested with fo
   <label for="other"> D. Endocytosis</label><br> <input type="radio" id="E" name="1" value="E">
   <label for="other"> E. Active transport</label><br>
 </form> 
-Answer: <p style="color:white">A A drug administered subcutaneously will initially be located primarily in the extracellular fluid. In order to be absorbed, the drug must enter the general circulation; that is, it must cross the capillary wall. Capillaries have very wide fenestrae that permit the passage of molecules with a molecular weight as high as 30,000 daltons (D). Therefore, most drugs given by the subcutaneous or intramuscular routes will enter the general circulation by bulk flow transport (or filtration; also known as solvent drag) through capillary fenestrae. Moreover, insulin is a protein with a molecular weight of about 6000 D, so it cannot cross the capillary wall by lipid or aqueous diffusion through aquaporins (water channels) of cell membranes. Bulk flow transport is a passive process and is directly proportional to the pressure gradient across the capillary wall. It does not depend on the structure of the drug but only on its molecular size (both lipid- and water-soluble drugs can be filtered provided the molecule is not too large).
-
-B See correct answer explanation.
-
-C–E Facilitated diffusion, endocytosis, and active transport do not seem to be involved in the absorption of insulin from the site of injection. </p><br>
+Answer: <p style="color:white">A A drug administered subcutaneously will initially be located primarily in the extracellular fluid. In order to be absorbed, the drug must enter the general circulation; that is, it must cross the capillary wall. Capillaries have very wide fenestrae that permit the passage of molecules with a molecular weight as high as 30,000 daltons (D). Therefore, most drugs given by the subcutaneous or intramuscular routes will enter the general circulation by bulk flow transport (or filtration; also known as solvent drag) through capillary fenestrae. Moreover, insulin is a protein with a molecular weight of about 6000 D, so it cannot cross the capillary wall by lipid or aqueous diffusion through aquaporins (water channels) of cell membranes. Bulk flow transport is a passive process and is directly proportional to the pressure gradient across the capillary wall. It does not depend on the structure of the drug but only on its molecular size (both lipid- and water-soluble drugs can be filtered provided the molecule is not too large).<br>
+B See correct answer explanation. C–E Facilitated diffusion, endocytosis, and active transport do not seem to be involved in the absorption of insulin from the site of injection. </p><br>
+17-year-old boy took a tablet of naproxen for a headache. Naproxen is a weak acid with a pKa of 5.2. What percentage of the drug was most likely water soluble in the patient’s plasma?<br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. 1% </label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. 24% </label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. 50% </label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. 76% </label><br> 
+  <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. 99%</label><br>
+  <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. Greater than 99% </label><br>
+</form> 
+Answer: <p style="color:white"> <table>
+  <tr>
+    <th>Difference between pH and pK<sub>a</sub></th>
+    <th>>2.0</th>
+    <th>2.0</th>
+    <th>1.0</th>
+    <th>0.5</th>
+    <th>0.0</th>
+  </tr>
+  <tr>
+    <td>Percentage</td>
+    <td>>99%</td>
+    <td>99%</td>
+    <td>90%</td>
+    <td>76%</td>
+    <td>50%</td>
+  </tr>
+</table></p>
   <i> Concentration and dose-effect relationships (eg, efficacy, potency), types of agonists (eg, full, partial, inverse) and antagonists and their actions</i><br>
 <i> Individual factors altering pharmacokinetics and pharmacodynamics (eg, age, gender, disease, tolerance, compliance, body weight, metabolic proficiency, pharmacogenetics)</i><br>
   <i> Mechanisms of drug adverse effects, overdosage, toxicology</i><br>
@@ -94,8 +124,7 @@ Ibuprofen (acid, pKa 4.8)<br>
   <label for="other"> E.Ibuprofen </label><br>
 </form> 
 Answer: <p style="color:white"> The Henderson-Hasselbalch equation predicts that a weak acid will be more nonionized, and therefore more lipid soluble, when pKa is greater than pH. Because the pH of the stomach lumen is less than 2, ibuprofen, an acid drug with a pKa of 4.8, will be mainly nonionized in the gastric lumen and will readily penetrate the gastric mucosal cell membranes. Inside the mucosal cells, however, the pH is about 7, and the drug will become mainly ionized because now the pKa is less than the pH. Consequently, the concentration gradient of the nonionized, lipid-soluble form will remain high, and the drug will continue crossing cell membranes. At equilibrium, the concentration of the nonionized moiety of the drug will be the same on both sides, but the concentration of the ionized moiety inside the cell can be 15 to 20 times higher than that in the gastric lumen, as the ionized moiety is “trapped” inside the cell (ion-trapping mechanism). Therefore, the total drug concentration inside the cell will be high.<br>
-  will stay in the stomach lumen.
-
+A–C Basic drugs are mainly ionized when the pKa is higher than the pH; therefore, most of the drug will stay in the stomach lumen. <br>
 D Theophylline, an acidic drug with a pKa of 8.8, is mainly nonionized in the stomach lumen and therefore can readily penetrate the gastric cell membranes. Inside the gastric cells, however, the drug remains mainly non-nonionized (i.e., lipid soluble) because the pKa is greater than the pH. Therefore, the drug will be able to diffuse through the basolateral membrane of the cell, thus reaching the extracellular fluids. No ion trapping occurs, and the drug will not concentrate inside the cells.<br>
   </p>
   <i> Signal transduction, including structure/function of all components of signal transduction</i>
