--- a/pharmacology.html
+++ b/pharmacology.html
@@ -65,7 +65,7 @@ B See correct answer explanation. C–E Facilitated diffusion, endocytosis, and 
   <input type="radio" id="F" name="1" value="F">
   <label for="other"> F. Greater than 99% </label><br>
 </form> 
-Answer: <p style="color:white"> <table>
+Answer: <p style="color:white"> <table><style="color:white">
   <tr>
     <th>Difference between pH and pK<sub>a</sub></th>
     <th>>2.0</th>
@@ -82,7 +82,7 @@ Answer: <p style="color:white"> <table>
     <td>76%</td>
     <td>50%</td>
   </tr>
-</table></p>
+  </table></style></p>
   <i> Concentration and dose-effect relationships (eg, efficacy, potency), types of agonists (eg, full, partial, inverse) and antagonists and their actions</i><br>
 <i> Individual factors altering pharmacokinetics and pharmacodynamics (eg, age, gender, disease, tolerance, compliance, body weight, metabolic proficiency, pharmacogenetics)</i><br>
   <i> Mechanisms of drug adverse effects, overdosage, toxicology</i><br>
