--- a/pharmacology.html
+++ b/pharmacology.html
@@ -65,7 +65,7 @@ B See correct answer explanation. C–E Facilitated diffusion, endocytosis, and 
   <input type="radio" id="F" name="1" value="F">
   <label for="other"> F. Greater than 99% </label><br>
 </form> 
-Answer: <p style="color:white"> <table><style="color:white">
+Answer: <p style="color:white"> <table style="color:white">
   <tr>
     <th>Difference between pH and pK<sub>a</sub></th>
     <th>>2.0</th>
